--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #000;
+  background-color: #9fb4ff;
   /* top: 0;
   left: 0; */
 }
